--- a/css/RWD/screen.css
+++ b/css/RWD/screen.css
@@ -1,36 +1,58 @@
 @media screen and (max-width: 768px){
-	body{
-		width: auto;
+	html{
+		width: 768px;
 	}
 
-	#above{
+/*	body{
+		width: auto;
+	}*/
+
+/*	.small-nav{
+		position: absolute;
 		width: 768px;
+		height: 60px;
+		background-color: rgb(110, 135, 160);
+		display: block;
+	}
+*/
+
+	#above{
+	/*	width: 768px;*/
 		background: cover;
 		height: auto;
 	}
 
 	h1{
 		font-size: 48px;
-		padding: 80px 0 0 45px; 
+		padding: 80px 0 0 45px;
+		margin: 0;
 	}
 
 	.site-nav{
-		width: 768px;
+	/*	width: 768px;*/
 		height: 36px;
-		margin: -40px 0 0 0;
 	}
+
+	/*ul{
+		display: none;
+	}*/
 
 	.site-nav li{
 		margin: 10px 20px 0px 20px;
 	}
 
-
+/*	span{
+		font-size: 40px;
+		margin-left: 18px;
+	}
+*/
 	.container{
 		width: 768px;
 	}
 
 	.center{
 		width: 768px;
+		clear: both;
 	}
 
 
@@ -40,6 +62,10 @@
 
 	.clear{
 		clear: both;
+	}
+
+	footer{
+		width: 768px;
 	}
 
 }
