--- a/css/style-arielwu.css
+++ b/css/style-arielwu.css
@@ -1,9 +1,3 @@
-body{
-	background-color: rgb(252, 255, 255);
-	padding: 0;
-	margin: 0;
-}
-
 #above{
 	background: url(../images/aboutus/img_title.jpg) 50% 0 no-repeat fixed;
 	background-size: cover;
@@ -13,99 +7,28 @@ body{
     padding: 0;
 }
 
-@font-face{
-	font-family: 'RaleWay';
-	src: url('../fonts/raleway_thin-webfont.woff');
-}
-
-h1{
-	font-size: 64px;
-	height: 120px;
-	padding: 120px 0 0 80px;
-	color: rgb(252, 250, 250);
-}
-
-.site-nav{
-	position: relative;
-	width: 100%;
-	height: 36px;
-	background-color: rgb(110, 135, 160);
-	background: cover;
-
-}
-
-.site-nav a:hover{
-	font-family: 'RaleWay', sans-serif;
-	color: white;
-	border-bottom: 4px solid rgb(250, 250, 250);
-	padding-bottom: 5px;
-}
-
-/*li div a:hover{
-	height: 36px;
-	color: rgba(255, 255, 255, 0.3);
-}*/
-
-#own{
-	font-family: 'RaleWay', sans-serif;
-	color: white;
-	border-bottom: 4px solid rgb(250, 250, 250);
-	padding-bottom: 5px;
-}
-
-.site-nav ul{
-	width: 100%;
-	padding: 0px 0px 0px 0px;
-	margin: auto;
-}
-
-.site-nav li{
-	font-family: 'RaleWay', sans-serif;
-	color: rgb(250, 250, 250);
-	list-style: none;
-	float: left;
-	margin: 10px 30px 0px 30px;
-}
-
-li a{
-	text-decoration: none;
-	font-family: 'RaleWay', sans-serif;
-	color: rgb(250, 250, 250);
-}
-
-.container{
-	width: 980px;
-	margin: auto;
-}
-
-.center{
-	margin: auto;
-    min-width: 980px;
-    overflow: auto;
-    width: 980px;
-	float: auto;
-}
-
-.text-center{
-	margin: auto;
-	margin-top: 50px;
-	float: auto;
-	width: 144px;
-}
-
 h2{
 	font-size: 28px;
 	/*font-family: 'RaleWay', sans-serif;*/
 	color: rgb(50, 55, 60);
 }
 
-/*.line{
-	width: 36px;
-	border-bottom: 3px solid rgb(50, 55, 60);
+img{
+	width: 600px;
 	float: auto;
-	margin: auto;
-	margin-top: 36px;
-}*/
+	margin: 25px auto;
+	margin-left: 190px;
+}
+
+@font-face{
+	font-family: 'cwTeX';
+	src: url('../fonts/cwTeXFangSong-zhonly.ttf');
+}
+
+@font-face{
+	font-family: 'cwTeXHei';
+	src: url('../fonts/cwTeXHei-zhonly.ttf');
+}
 
 #button{
 	width: 280px;
@@ -123,30 +46,33 @@ h2{
 	border: 1.6px solid rgb(70, 85, 100);
 	padding-left: 20px;
 	color: rgb(70, 85, 100);
-	margin: 20px auto;
+	margin: 40px auto;
 }
 
 .button:hover{
 	width: 100px;
 	font-family: Helvetica;
 	color: white;
-	border: 1.6px solid rgba(70, 85, 100, 0.5);
+	border: 1.6px solid rgba(70, 85, 100, 0);
 	background-color: rgba(70, 85, 100, 0.5);
 	padding-left: 20px;
 	color: rgb(252, 255, 255);
-	margin: 20px auto;
+	margin: 40px auto;
+}
+
+.text-center{
+	width: 175px;
 }
 
 #left{
 	float: left;
 	width: 70px;
-	padding-left: 36px;
+	padding-left: 30px;
 	font-family: Helvetica;
 	color: white;
 	border: 1.6px solid rgb(70, 85, 100);
 	background-color: rgb(70, 85, 100);
 	color: rgb(252, 255, 255);
-	margin: 20px auto;
 }
 
 #right{
@@ -155,33 +81,56 @@ h2{
 	padding-left: 27px;
 }
 
-img{
-	width: 600px;
-	float: auto;
-	margin: 25px auto;
-	margin-left: 190px;
+.name{
+	width: 67px;
+	font-size: 24px;
+	font-family: 'cwTeX', serif;
 }
 
-.clear{
-	clear: both;
+.birth{
+	width: 120px;
+	font-size: 24px;
+	font-family: 'cwTeX', serif;
+	margin-top: 15px;
 }
 
-footer{
-	width: 100%;
-	height: 100px;
-	background-color: rgb(110, 135, 160);
+.interest{
+	width: 258px;
+	font-size: 24px;
+	font-family: 'cwTeX', serif;
 	margin-top: 36px;
 }
 
-footer p{
-	width: 24px;
-	height: 30px;
-	padding: 0;
+.line{
+	width: 30px;
+	border-bottom: 3px solid rgb(50, 55, 60);
+	float: auto;
 	margin: auto;
+	margin-top: 60px;
 }
 
-footer p a{
-	text-decoration: none;
-	font-size: 50px;
-	color: rgb(252, 255, 255);
+.school{
+	width: 45px;
+	font-size: 24px;
+	font-family: 'cwTeX', serif;
+	margin-top: 30px;
 }
+
+.university{
+	width: 455px;
+	font-size: 24px;
+	font-family: 'cwTeX', serif;
+	margin-top: 20px;
+}
+
+.juniorhigh{
+	width: 177px;
+	font-size: 24px;
+	font-family: 'cwTeX', serif;
+	margin-top: 20px;
+}
+
+p{
+	margin: 8px auto;
+}
+
