--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,10 @@ body{
 	margin: auto;
 }
 
+.small-nav{
+	display: none;
+}
+
 p a{
 	text-decoration: none;
 	font-size: 50px;
@@ -95,7 +99,6 @@ p a{
     width: 980px;
 }
 
-
 /*.story .float-left{
 	padding: 200px 0 0 0;
 	position: relative;
@@ -114,12 +117,12 @@ p a{
 	width: 240px;
 }
 
-.float-right{
+/*.float-right{
 	width: 475px;
 	float: right;
 	text-align: right;
     margin: 0 0 0 0px;
-}
+}*/
 
 
 div{
@@ -200,9 +203,10 @@ h3{
 	font-family: 'RaleWay', sans-serif;
 	font-weight: 700;
 	border: 1.5px solid rgb(50, 55, 60);
-	padding-right: 8px;
+	padding-left: 8px;
+	color: white;
+	margin: 20px 0 0 0;
 	color: rgb(50, 55, 60);
-	margin: 20px 0 0 16px;
 }
 
 #broken:hover{
@@ -212,7 +216,8 @@ h3{
 	font-weight: 700;
 	border: 1.5px solid rgba(50, 55, 60, 0);
 	background-color: rgba(50, 55, 60, 0.3);
-	padding-right: 8px;	
+	padding-left: 8px;
+	margin: 20px 0 0 0;
 }
 
 #centerbutton{
