--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ body{
 }
 
 #fifth{
-	background: url(../images/img_prose.jpg) 50% 0 no-repeat fixed;
+	background: url(../images/img_prose.JPG) 50% 0 no-repeat fixed;
 	background-size: cover;
     color: white;
     height: 800px;
