--- a/css/style-arielwu.css
+++ b/css/style-arielwu.css
@@ -14,10 +14,10 @@ h2{
 }
 
 img{
-	width: 600px;
+	width: 500px;
 	float: auto;
 	margin: 25px auto;
-	margin-left: 190px;
+	margin-left: 240px;
 }
 
 @font-face{
@@ -96,6 +96,13 @@ img{
 
 .interest{
 	width: 258px;
+	font-size: 24px;
+	font-family: 'cwTeX', serif;
+	margin-top: 36px;
+}
+
+.email{
+	width: 319px;
 	font-size: 24px;
 	font-family: 'cwTeX', serif;
 	margin-top: 36px;
