--- a/css/style-nav-footer.css
+++ b/css/style-nav-footer.css
@@ -114,3 +114,10 @@ footer p a{
 	font-size: 50px;
 	color: rgb(252, 255, 255);
 }
+
+#text{
+	width: 306px;
+	margin: 30px auto 0 auto;
+	color: white;
+
+}
