--- a/css/style-prose.css
+++ b/css/style-prose.css
@@ -1,5 +1,5 @@
 #above{
-	background: url(../images/prose/img_title.jpg) 50% 0 no-repeat fixed;
+	background: url(../images/prose/img_title.JPG) 50% 0 no-repeat fixed;
 	background-size: cover;
 	color: white;
     height: 400px;
