--- a/css/style-arielwu.css
+++ b/css/style-arielwu.css
@@ -101,12 +101,12 @@ img{
 	margin-top: 36px;
 }
 
-.email{
+/* .email{
 	width: 319px;
 	font-size: 24px;
 	font-family: 'cwTeX', serif;
 	margin-top: 36px;
-}
+} */
 
 .line{
 	width: 30px;
